# not-dead-yet

./: README.md  pyproject.toml
not_dead_yet/: __main__.py  app.py  notifier.py  resource.py  serve.py  watcher.py  ws.py
