[tool.poetry]
name = "not-dead-yet"
version = "0.1.0"
description = "A simple live server implementation."
authors = ["Angus Hollands <goosey15@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
ndy = 'not_dead_yet.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
